--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
-    "chrono-node": "^2.2.1",
+    "chrono-node": "^2.3.0",
     "dateformat": "^4.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2"
   }
 }
