--- a/backend/package.json
+++ b/backend/package.json
@@ -9,16 +9,20 @@
   "author": "Martin Weihrauch",
   "license": "MIT",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.5",
+    "cheerio": "^1.0.0-rc.10",
     "chrono-node": "^2.3.0",
-    "dateformat": "^4.5.1"
+    "dateformat": "^4.5.1",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
-    "eslint": "^7.29.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-vue": "^7.17.0",
     "prettier": "^2.3.2"
   }
 }
