--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "parse-git-numstat": "^1.1.2",
     "shelljs": "^0.8.4",
     "shelljs-exec-proxy": "^0.2.0",
+    "treeify-paths": "^1.0.2",
     "vue-google-charts": "^0.3.3",
     "vuetify": "^2.5.5"
   },
