--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@nuxtjs/pwa": "^3.3.5",
     "child_process": "^1.0.2",
     "core-js": "^3.15.1",
+    "fs": "0.0.1-security",
     "nuxt": "^2.15.7",
     "parse-git-numstat": "^1.1.2",
     "shelljs": "^0.8.4",
     "shelljs-exec-proxy": "^0.2.0",
-    "treeify-paths": "^1.0.2",
     "vue-google-charts": "^0.3.3",
     "vuetify": "^2.5.5"
   },
