--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "child_process": "^1.0.2",
     "core-js": "^3.15.1",
+    "file-saver": "^2.0.5",
     "fs": "0.0.1-security",
     "nuxt": "^2.15.7",
     "parse-git-numstat": "^1.1.2",
