implemented new project tree

--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "@nuxtjs/pwa": "^3.3.5",
     "child_process": "^1.0.2",
     "core-js": "^3.15.1",
+    "fast-glob": "^3.2.11",
     "file-saver": "^2.0.5",
     "fs": "0.0.1-security",
+    "glob": "^7.2.0",
+    "h3": "^0.3.9",
+    "minimatch": "^3.0.4",
+    "normalize-path": "^3.0.0",
     "nuxt": "^2.15.7",
     "parse-git-numstat": "^1.1.2",
     "shelljs": "^0.8.4",
