--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fast-glob": "^3.2.11",
     "file-saver": "^2.0.5",
     "fs": "0.0.1-security",
+    "gitlog": "^4.0.4",
     "glob": "^7.2.0",
     "h3": "^0.3.9",
     "minimatch": "^3.0.4",
