--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fast-glob": "^3.2.11",
     "file-saver": "^2.0.5",
     "fs": "0.0.1-security",
+    "git-blame": "^1.4.0",
     "gitlog": "^4.0.4",
     "glob": "^7.2.0",
     "h3": "^0.3.9",
@@ -43,6 +44,8 @@
     "@nuxtjs/vuetify": "^1.12.1",
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1"
+    "eslint-plugin-vue": "^7.12.1",
+    "should": "~7.1.1"
+
   }
 }
